# aos-client-sdk

./: README.md  azure.yaml  pyproject.toml
.github/specs/: repository.md
.github/workflows/: ci.yml  deploy.yml
config/: example_app_registry.json
examples/: strategic_review.py
src/aos_client/: __init__.py  app.py  auth.py  client.py  deployment.py  foundry.py  gateway.py  identity.py  mcp.py  models.py  observability.py  registration.py  reliability.py  service_bus.py  testing.py
tests/: test_app.py  test_app_new_features.py  test_auth.py  test_client.py  test_deployment.py  test_foundry.py  test_gateway.py  test_identity.py  test_mcp.py  test_models.py  test_new_client_apis.py  test_new_models.py  test_observability.py  test_registration.py  test_reliability.py  test_service_bus.py  test_testing_mock.py
