[build-system]
requires = ["setuptools>=75.0.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "aos-client-sdk"
version = "7.0.0"
description = "Application framework and client SDK for building Azure Functions apps powered by the Agent Operating System — all orchestration managed internally by Foundry Agent Service"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"

dependencies = [
    "pydantic>=2.0.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
azure = [
    "azure-identity>=1.15.0",
    "azure-servicebus>=7.12.0",
    "azure-functions>=1.21.0",
]
aos = [
    "aos-kernel[azure]>=5.0.0",
]
intelligence = [
    "aos-intelligence>=2.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pylint>=3.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/ASISaga/aos-client-sdk"
Documentation = "https://github.com/ASISaga/aos-client-sdk/tree/main/docs"
Repository = "https://github.com/ASISaga/aos-client-sdk"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
